--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "db_sync": "prisma migrate deploy"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.21.1",
     "@react-email/components": "^0.0.22",
     "@react-email/link": "^0.0.9",
     "@tanstack/react-query": "^5.59.16",
-    "iron-session": "^8.0.2",
-    "jose": "^5.6.3",
-    "next": "14.2.5",
-    "nodemailer": "^6.9.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "iron-session": "^8.0.3",
+    "jose": "^5.9.6",
+    "next": "^15.0.2",
+    "nodemailer": "^6.9.16",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-email": "^2.1.6"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "prisma": "^5.17.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^20.17.5",
+    "@types/nodemailer": "^6.4.16",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.0.2",
+    "postcss": "^8.4.47",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
