--- a/package.json
+++ b/package.json
@@ -11,29 +11,31 @@
     "db_sync": "prisma migrate deploy"
   },
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "@react-email/components": "^0.0.22",
     "@react-email/link": "^0.0.9",
-    "@tanstack/react-query": "^5.59.16",
-    "iron-session": "^8.0.3",
+    "@tanstack/react-query": "^5.65.1",
+    "iron-session": "^8.0.4",
     "jose": "^5.9.6",
-    "next": "^15.0.2",
-    "nodemailer": "^6.9.16",
+    "next": "^15.1.6",
+    "next-intl": "^3.26.3",
+    "nodemailer": "^6.10.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-email": "^2.1.6"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
-    "@types/node": "^20.17.5",
-    "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^20.17.16",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.0.2",
-    "postcss": "^8.4.47",
-    "prisma": "^5.21.1",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "eslint-config-next": "^15.1.6",
+    "postcss": "^8.5.1",
+    "prisma": "^5.22.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
