deprecated existing database in favour of admin, added redis

--- a/package.json
+++ b/package.json
@@ -6,35 +6,33 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deployment": "pnpm db_sync && node server.js",
-    "db_sync": "prisma migrate deploy"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0",
     "@react-email/components": "^0.0.22",
     "@react-email/link": "^0.0.9",
-    "@tanstack/react-query": "^5.74.3",
+    "@tanstack/react-query": "^5.75.7",
     "iron-session": "^8.0.4",
     "jose": "^5.10.0",
-    "next": "^15.3.0",
+    "next": "^15.3.2",
+    "nextjs-toploader": "^3.8.16",
     "nodemailer": "^6.10.1",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-email": "^2.1.6",
+    "redis": "^5.0.1",
     "tailwind-scrollbar": "^4.0.2"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
-    "@types/node": "^20.17.30",
+    "@types/node": "^20.17.46",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
+    "@types/react": "^18.3.21",
+    "@types/react-dom": "^18.3.7",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.3.0",
+    "eslint-config-next": "^15.3.2",
     "postcss": "^8.5.3",
-    "prisma": "^6.6.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
