--- a/package.json
+++ b/package.json
@@ -9,31 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-email/components": "^0.0.22",
-    "@react-email/link": "^0.0.9",
-    "@tanstack/react-query": "^5.75.7",
+    "@react-email/components": "^0.0.41",
+    "@react-email/link": "^0.0.12",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tanstack/react-query": "^5.80.6",
     "iron-session": "^8.0.4",
-    "jose": "^5.10.0",
-    "next": "^15.3.2",
+    "jose": "^6.0.11",
+    "next": "^15.3.3",
     "nextjs-toploader": "^3.8.16",
-    "nodemailer": "^6.10.1",
     "qrcode.react": "^4.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-email": "^2.1.6",
-    "redis": "^5.0.1",
-    "tailwind-scrollbar": "^4.0.2"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-email": "^4.0.16",
+    "redis": "^5.5.6",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
-    "@types/cookie": "^0.6.0",
-    "@types/node": "^20.17.46",
+    "@types/node": "^22.15.30",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18.3.21",
-    "@types/react-dom": "^18.3.7",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^15.3.2",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "^15.3.3",
+    "postcss": "^8.5.4",
     "typescript": "^5.8.3"
   }
 }
