--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,12 @@
 .dockerignore
+Dockerfile
+.gitignore
+.git
 
 # Not needed as we are bundling the whole app
 node_modules
+bun.lockb
+
 # Log files
 logs
 *.log
@@ -10,7 +15,6 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .next
-.git
 
 # some secrets :)
 intermediary-frontent-deploy.yaml
