--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@tanstack/react-query": "^5.80.6",
     "iron-session": "^8.0.4",
     "jose": "^6.0.11",
-    "next": "^15.3.3",
     "nextjs-toploader": "^3.8.16",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
@@ -26,12 +25,15 @@
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
+    "@next/swc-darwin-arm64": "^15.3.3",
     "@types/node": "^22.15.30",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
+    "esbuild": "^0.25.5",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
+    "next": "^15.3.3",
     "postcss": "^8.5.4",
     "typescript": "^5.8.3"
   }
